--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '^1.20'
+        go-version: '1.20'
       id: go
 
     - name: Check out code into the Go module directory
@@ -45,7 +45,7 @@ jobs:
         which migrate
 
     - name: Run migrations
-      uses: make migrateup
+      run: make migrateup
 
     - name: Test
       run: make test
