--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,7 +7,8 @@ packages:
     engine: "postgresql"
     emit_json_tags: true
     emit_prepared_queries: false
-    emit_interface: false
+    emit_interface: true
     emit_exact_table_names: true
+    emit_empty_slices: true
 #accounts table -> Accounts struct
 #var account Accounts
